--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
 <body>
     <div id="controls">
         <label>Mass: <input type="range" id="mass" min="0.1" max="5" step="0.1" value="1"></label><br>
-        <label>Spring k: <input type="range" id="spring" min="0.1" max="5" step="0.1" value="1"></label><br>
+        <label>Spring D: <input type="range" id="spring" min="0.1" max="5" step="0.1" value="1"></label><br>
         <label>Damping: <input type="range" id="damping" min="0" max="0.2" step="0.01" value="0.05"></label><br>
         <button id="run">Run</button>
+        <p>Oscillation Period: <span id="period">0</span> s</p>
     </div>
     <script>
         const scene = new THREE.Scene();
@@ -34,57 +35,12 @@
         scene.add(atom2);
 
         const springMaterial = new THREE.LineBasicMaterial({ color: 0x00ff00 });
-        function createSpringSegments() {
+        function createSpringSegments(start, end) {
             let points = [];
             let numCoils = 10;
             let amplitude = 0.1;
             for (let i = 0; i <= numCoils; i++) {
-                let x = -0.8 + (i / numCoils) * 1.6;
-                let y = Math.sin(i * Math.PI * 2 / numCoils) * amplitude;
-                points.push(new THREE.Vector3(x, y, 0));
-            }
-            return new THREE.BufferGeometry().setFromPoints(points);
-        }
-        let springGeometry = createSpringSegments();
-        const spring = new THREE.Line(springGeometry, springMaterial);
-        scene.add(spring);
-
-        camera.position.z = 2;
-
-        let k = 1;
-        let m = 1;
-        let damping = 0.05;
-        let amplitude = 0.5;
-        let time = 0;
-        let omega = Math.sqrt(k / m);
-        let baseDistance = 1.0;
-
-        function updateOscillation() {
-            time += 0.05;
-            let displacement = amplitude * Math.exp(-damping * time) * Math.cos(omega * time);
-            atom1.position.x = -baseDistance - displacement;
-            atom2.position.x = baseDistance + displacement;
-            let newSpringGeometry = createSpringSegments();
-            newSpringGeometry.translate((atom1.position.x + atom2.position.x) / 2, 0, 0);
-            spring.geometry.dispose();
-            spring.geometry = newSpringGeometry;
-        }
-
-        function animate() {
-            requestAnimationFrame(animate);
-            updateOscillation();
-            renderer.render(scene, camera);
-        }
-
-        document.getElementById("run").addEventListener("click", () => {
-            m = parseFloat(document.getElementById("mass").value);
-            k = parseFloat(document.getElementById("spring").value);
-            damping = parseFloat(document.getElementById("damping").value);
-            omega = Math.sqrt(k / m);
-            time = 0;
-        });
-
-        animate();
-    </script>
-</body>
-</html>
+                let t = i / numCoils;
+                let x = start.x + t * (end.x - start.x);
+                let y = Math.sin(i * Math.PI * 2) * amplitude;
+                points.push(n
