--- a/index.html
+++ b/index.html
@@ -37,16 +37,17 @@
         const springMaterial = new THREE.LineBasicMaterial({ color: 0x00ff00 });
         function createSpringSegments(start, end) {
             let points = [];
-            let numCoils = 10;
+            let numCoils = 15;
             let amplitude = 0.1;
             for (let i = 0; i <= numCoils; i++) {
                 let t = i / numCoils;
                 let x = start.x + t * (end.x - start.x);
-                let y = Math.sin(i * Math.PI * 2) * amplitude;
+                let y = Math.sin(i * Math.PI * 2 * 3) * amplitude;
                 points.push(new THREE.Vector3(x, y, 0));
             }
             return new THREE.BufferGeometry().setFromPoints(points);
         }
+
         let springGeometry = createSpringSegments(atom1.position, atom2.position);
         const spring = new THREE.Line(springGeometry, springMaterial);
         scene.add(spring);
@@ -59,13 +60,14 @@
         let amplitude = 0.5;
         let time = 0;
         let omega = Math.sqrt(D / m);
-        let baseDistance = 1.0;
+        let baseDistance = 1.2;
 
         function updateOscillation() {
             time += 0.05;
             let displacement = amplitude * Math.cos(omega * time);
             atom1.position.x = -baseDistance - displacement;
             atom2.position.x = baseDistance + displacement;
+            
             let newSpringGeometry = createSpringSegments(atom1.position, atom2.position);
             spring.geometry.dispose();
             spring.geometry = newSpringGeometry;
