--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <label>Spring D: <input type="range" id="spring" min="0.1" max="5" step="0.1" value="1"> <span id="springValue">1</span> N/m</label><br>
         <label>Damping: <input type="range" id="damping" min="0" max="0.2" step="0.01" value="0.05"> <span id="dampingValue">0.05</span></label><br>
         <button id="run">Run</button>
+        <button id="stop">Stop</button>
         <p>Oscillation Period: <span id="period">0</span> s</p>
     </div>
     <div id="chartContainer">
@@ -66,12 +67,14 @@
         let time = 0;
         let omega = Math.sqrt(D / m);
         let baseDistance = 1.2;
+        let animationRunning = true;
         
         const displacementData = { labels: [], datasets: [{ label: "Displacement", borderColor: "blue", data: [] }] };
         const ctx = document.getElementById('displacementChart').getContext('2d');
         const chart = new Chart(ctx, { type: 'line', data: displacementData, options: { responsive: false, scales: { x: { title: { display: true, text: 'Time (s)' } }, y: { title: { display: true, text: 'Displacement' } } } } });
 
         function updateOscillation() {
+            if (!animationRunning) return;
             time += 0.05;
             let displacement = amplitude * Math.cos(omega * time);
             atom1.position.x = -baseDistance - displacement;
@@ -81,10 +84,6 @@
             spring.geometry.dispose();
             spring.geometry = newSpringGeometry;
             
-            if (displacementData.labels.length > 50) {
-                displacementData.labels.shift();
-                displacementData.datasets[0].data.shift();
-            }
             displacementData.labels.push(time.toFixed(2));
             displacementData.datasets[0].data.push(displacement);
             chart.update();
@@ -106,6 +105,11 @@
             displacementData.labels = [];
             displacementData.datasets[0].data = [];
             chart.update();
+            animationRunning = true;
+        });
+
+        document.getElementById("stop").addEventListener("click", () => {
+            animationRunning = false;
         });
 
         document.getElementById("mass").addEventListener("input", (e) => {
